--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,22 @@
       </header>
       <main>
         <section class="section-about">
-          <div class="u-center-text u-margin-bottom-8">
+          <div class="u-center-text u-margin-bottom-large">
               <h2 class="heading-secondary">
                 Exciting tours for adventurous people
               </h2>
           </div>
           <div class="row">
             <div class="col-1-of-2">
-              Text content
+              <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas ab tempore non in eligendi, enim aspernatur illum, soluta, nostrum error temporibus adipisci eos. Nihil, ullam quo iste reiciendis quas eum?
+              </p>
+              <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quidem tempore dolor harum, culpa tempora ut, reiciendis eius.
+              </p>
+              <a href="#" class="btn-text">Learn more &rarr;</a>
             </div>
             <div class="col-1-of-2">
               Image composition
