--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,50 @@
           </div>
         </section>
         <section class="section-features">
-          
+          <div class="row">
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Explore the World</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur quisquam vitae velit minus numquam.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Explore the World</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur quisquam vitae velit minus numquam.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Explore the World</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur quisquam vitae velit minus numquam.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Explore the World</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur quisquam vitae velit minus numquam.
+                </p>
+              </div>
+            </div>
+          </div>
         </section>
       </main>
         
