--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
       <main>
         <section class="section-about">
           <div class="u-center-text u-margin-bottom-large">
-              <h2 class="heading-secondary">
-                Exciting tours for adventurous people
-              </h2>
+            <h2 class="heading-secondary">
+              Exciting tours for adventurous people
+            </h2>
           </div>
           <div class="row">
             <div class="col-1-of-2">
@@ -92,6 +92,22 @@
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur quisquam vitae velit minus numquam.
                 </p>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="section-tours">
+          <h2 class="heading-secondary">
+            Most popular tours
+          </h2>
+          <div class="row">
+            <div class="col-1-of-3">
+
+            </div>
+            <div class="col-1-of-3">
+              
+            </div>
+            <div class="col-1-of-3">
+              
             </div>
           </div>
         </section>
