--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,9 @@
             <div class="col-1-of-3">
               <div class="card">
                 <div class="card__side card__side--front card__side--front-1">
-                  Front
+                  <div class="card__picture card__picture--1"></div>
+                  <div class="card__heading"></div>
+                  <div class="card__details"></div>
                 </div>
                 <div class="card__side card__side--back card__side--back-1">
                   Back
