Added video to be used as background

--- a/public/index.html
+++ b/public/index.html
@@ -198,6 +198,13 @@
           </div>
         </section>
         <section class="section-stories">
+          <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+              <source src="img/video.mp4" type="video/mp4">
+              <source src="img/video.webm" type="video/webm">
+              This video is not supported by your browser
+            </video>
+          </div>
           <div class="u-center-text u-margin-bottom-large">
             <h2 class="heading-secondary">
               We make people genuinely happy
@@ -207,6 +214,7 @@
             <div class="story">
               <figure class="story__shape">
                 <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                <figcaption class="story__caption">Mary Smith</figcaption>
               </figure>
               <div class="story__text">
                 <h3 class="heading-tertiary u-margin-bottom-small">
@@ -217,6 +225,25 @@
                 </p>
               </div>
             </div>
+          </div>
+          <div class="row">
+            <div class="story">
+              <figure class="story__shape">
+                <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                <figcaption class="story__caption">Jack Wilson</figcaption>
+              </figure>
+              <div class="story__text">
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                  Wow, this trip changed my life!
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus vitae, dolores harum, veritatis ipsum, optio illo culpa quae facere officiis magni quisquam dolorum iste earum ratione repudiandae nemo commodi deserunt? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="u-center-text u-margin-top-extra-large">
+            <a href="#" class="btn-text">Discover all tours</a>
           </div>
         </section>
       </main>
