Created base for form element

--- a/public/index.html
+++ b/public/index.html
@@ -246,6 +246,17 @@
             <a href="#" class="btn-text">Discover all tours</a>
           </div>
         </section>
+        <section class="section-book">
+          <div class="row">
+            <div class="book">
+              <div class="book__form">
+                <form action="#" class="form">
+                  
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </body>
 </html>
