--- a/public/index.html
+++ b/public/index.html
@@ -330,5 +330,12 @@
           </div>
         </div>
       </footer>
+
+      <div class="popup">
+        <div class="popup__content">
+          POPUP
+        </div>
+      </div>
+
     </body>
 </html>
